--- a/public/themes/admin_simpleboot3/portal/admin_article/edit.html
+++ b/public/themes/admin_simpleboot3/portal/admin_article/edit.html
@@ -115,6 +115,21 @@
                         </td>
                     </tr>
                     <tr>
+                        <th>诗歌附件</th>
+                        <td>
+                            <ul id="mp3" class="pic-list list-unstyled form-inline">
+                            </ul>
+                            <input type="hidden" name="post[mp3]" class="form-control"
+                                   id="js-thumbnail-input">
+                            <a href="javascript:uploadOne('文件上传','#js-thumbnail-input');">
+                                <img src="__TMPL__/public/assets/images/default-thumbnail.png"
+                                     id="js-thumbnail-input-preview"
+                                     width="135" style="cursor: pointer"/>
+                            </a>
+
+                        </td>
+                    </tr>
+                    <tr>
                         <th>附件</th>
                         <td>
                             <ul id="files" class="pic-list list-unstyled form-inline">
