--- a/public/themes/admin_simpleboot3/portal/admin_article/index.html
+++ b/public/themes/admin_simpleboot3/portal/admin_article/index.html
@@ -3,8 +3,8 @@
 <body>
 <div class="wrap js-check-wrap">
     <ul class="nav nav-tabs">
-        <li class="active"><a href="javascript:;">所有漫谈文章</a></li>
-        <li><a href="{:url('AdminArticle/add')}">添加漫谈文章</a></li>
+        <li class="active"><a href="javascript:;">所有诗歌</a></li>
+        <li><a href="{:url('AdminArticle/add')}">添加诗歌</a></li>
     </ul>
     <form class="well form-inline margin-top-20" method="post" action="{:url('AdminArticle/index')}">
         分类:
