--- a/public/themes/admin_simpleboot3/portal/admin_article/add.html
+++ b/public/themes/admin_simpleboot3/portal/admin_article/add.html
@@ -32,7 +32,7 @@
         <li><a href="{:url('AdminArticle/index')}">诗歌管理</a></li>
         <li class="active"><a href="{:url('AdminArticle/add')}">添加诗歌</a></li>
     </ul>
-    <form action="{:url('AdminArticle/addPost')}" method="post" class="form-horizontal js-ajax-form margin-top-20">
+    <form action="{:url('AdminArticle/addPost')}" method="post" class="form-horizontal js-ajax-form margin-top-20" enctype="multipart/form-data">
         <div class="row">
             <div class="col-md-9">
                 <table class="table table-bordered">
@@ -96,6 +96,21 @@
                             <ul id="photos" class="pic-list list-unstyled form-inline"></ul>
                             <a href="javascript:uploadMultiImage('图片上传','#photos','photos-item-tpl');"
                                class="btn btn-default btn-sm">选择图片</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>诗歌附件</th>
+                        <td>
+                            <ul id="mp3" class="pic-list list-unstyled form-inline">
+                            </ul>
+                            <input type="hidden" name="post[music]" class="form-control"
+                                   id="js-thumbnail-input">
+                            <a href="javascript:uploadOne('文件上传','#js-thumbnail-input');" class="btn btn-sm btn-default">
+                                <img src="__TMPL__/public/assets/images/default-thumbnail.png"
+                                     id="js-thumbnail-input-preview"
+                                     width="135" style="cursor: pointer"/>
+                            </a>
+
                         </td>
                     </tr>
                     <tr>
