--- a/public/themes/simpleboot3/public/nav.html
+++ b/public/themes/simpleboot3/public/nav.html
@@ -93,7 +93,7 @@
             <div class="nav">
                 <ul class="df">
                     <li class="cur"><a href="{:cmf_url('portal/Index/index')}" target="_blank">首  页</a></li>
-                    <li><a href="{:cmf_url('portal/Article/index')}" target="_blank">诗歌歌曲 </a></li>
+                    <li><a href="{:cmf_url('portal/List/index')}" target="_blank">诗歌歌曲 </a></li>
                     <li><a href="#" target="_blank">诗歌源考 </a></li>
                     <li><a href="#" target="_blank">诗歌赏析 </a></li>
                     <li><a href="{:cmf_url('portal/Ramshow/index')}" target="_blank">诗歌漫谈 </a></li>
