--- a/public/themes/admin_simpleboot3/portal/admin_ramble/add.html
+++ b/public/themes/admin_simpleboot3/portal/admin_ramble/add.html
@@ -54,6 +54,12 @@
                         </td>
                     </tr>
                     <tr>
+                        <th>概要<span class="form-required">*</span></th>
+                        <td>
+                            <textarea name="outline" style="width: 850px"></textarea>
+                        </td>
+                    </tr>
+                    <tr>
                         <th>内容</th>
                         <td>
                             <script type="text/plain" id="content" name="details"></script>
