--- a/public/themes/simpleboot3/portal/album/index.html
+++ b/public/themes/simpleboot3/portal/album/index.html
@@ -12,71 +12,130 @@
 </div>
 
 <div class="content flex1">
-    <div class="inner">
-        <div class="msba">
-            <a href="#" class="cur" >全部</a>
-            <foreach name="cate" item="vo">
-                <a href="#" class="" >{$vo.name}</a>
-            </foreach>
+    <div class="cl h22"></div>
+    <div class="inner df js">
+        <div class="digentu">
+            <img src="images/avtar.png" alt="" />
         </div>
-        <div class="msba">
-            <a href="#" class="cur" >全部</a>
+        <div class="zhongnr flex1">
+            <div class="shinremt">诗人名称 <br><span class="sinnrew">EUNGLISH NAME</span></div>
+            <table class="sbbtl">
+                <tr>
+                    <td>出生地  </td>
+                    <td>出生日期</td>
+                    <td>逝世日期</td>
+                </tr>
+                <tr>
+                    <td>英国伦敦      </td>
+                    <td>1800-11-09    </td>
+                    <td>1882-09-09    </td>
+                </tr>
 
-            <a href="#" class="" >A  </a>
-            <a href="#" class="" >B  </a>
-            <a href="#" class="" >C  </a>
-            <a href="#" class="" >D  </a>
-            <a href="#" class="" >E  </a>
-            <a href="#" class="" >F  </a>
-            <a href="#" class="" >G  </a>
-            <a href="#" class="" >H  </a>
-            <a href="#" class="" >I  </a>
-            <a href="#" class="" >J  </a>
-            <a href="#" class="" >K  </a>
-            <a href="#" class="" >L  </a>
-            <a href="#" class="" >M  </a>
-            <a href="#" class="" >N  </a>
-            <a href="#" class="" >O  </a>
-            <a href="#" class="" >P  </a>
-            <a href="#" class="" >Q  </a>
-            <a href="#" class="" >R  </a>
-            <a href="#" class="" >S  </a>
-            <a href="#" class="" >T  </a>
-            <a href="#" class="" >U  </a>
-            <a href="#" class="" >V  </a>
-            <a href="#" class="" >W  </a>
-            <a href="#" class="" >X  </a>
-            <a href="#" class="" >Y  </a>
-            <a href="#" class="" >Z  </a>
+            </table>
+            <div class="ansbibtn df ">
+                <a href="#" class="df ac jc cur" ><span class=""><img src="images/play.png" alt="" /></span> 播放</a>
+                <a href="#" class="df ac jc" ><span class=""><img src="images/icm1.png" alt="" /></span> 收藏</a>
+                <a href="#" class="df ac jc" ><span class=""><img src="images/icm2.png" alt="" /></span> 分享</a>
+
+            </div>
+
         </div>
-        <div class="cl h15"></div>
-        <div class="lostxbo lostxbosm">
 
-            <div class="liscontin">
-                <ul class="shilist1 shilist3">
-                    <foreach name="album" item="vo">
-                    <li><a href="#" class="" ><span class="sspomg"><img src="images/shi2.jpg" alt="" /></span><span class="shinmtl">{$vo.name}</span></a></li>
-                    </foreach>
-                </ul>
+    </div>
+
+    <div class="inner df js">
+        <div class="zahunmsu">
+            <div class="shijjs">曲目列表</div>
+            <div class="cl h11"></div>
+            <table class="shijjtb">
+                <tr class="sbttou">
+
+                    <td>诗歌   </td>
+                    <td>   </td>
+                    <td>时间   </td>
+                    <td>专辑   </td>
+                    <td>时长   </td>
+                </tr>
+                <tr>
+
+                    <td>诗歌名称诗歌名称诗歌名称诗歌名称诗歌名称   </td>
+                    <td class="shiinco">
+                        <div class="df ac">
+                            <a href="#" class="" ><img src="images/c1.png" alt="" /></a>
+                            <a href="#" class="" ><img src="images/c2.png" alt="" /></a>
+                            <a href="#" class="" ><img src="images/c3.png" alt="" /></a>
+                            <a href="#" class="" ><img src="images/c4.png" alt="" /></a>
+                            <a href="#" class="" ><img src="images/c5.png" alt="" /></a>
+                        </div>
+                    </td>
+                    <td>1098年   </td>
+                    <td>《诗歌专辑名称》   </td>
+                    <td>10分钟   </td>
+                </tr>
+                <tr>
+
+                    <td>诗歌名称诗歌名称诗歌名称诗歌名称诗歌名称   </td>
+                    <td class="shiinco">
+                        <div class="df ac">
+                            <a href="#" class="" ><img src="images/c1.png" alt="" /></a>
+                            <a href="#" class="" ><img src="images/c2.png" alt="" /></a>
+                            <a href="#" class="" ><img src="images/c3.png" alt="" /></a>
+                            <a href="#" class="" ><img src="images/c4.png" alt="" /></a>
+                            <a href="#" class="" ><img src="images/c5.png" alt="" /></a>
+                        </div>
+                    </td>
+                    <td>1098年   </td>
+                    <td>《诗歌专辑名称》   </td>
+                    <td>10分钟   </td>
+                </tr>
+                <tr>
+
+                    <td>诗歌名称诗歌名称诗歌名称诗歌名称诗歌名称   </td>
+                    <td class="shiinco">
+                        <div class="df ac">
+                            <a href="#" class="" ><img src="images/c1.png" alt="" /></a>
+                            <a href="#" class="" ><img src="images/c2.png" alt="" /></a>
+                            <a href="#" class="" ><img src="images/c3.png" alt="" /></a>
+                            <a href="#" class="" ><img src="images/c4.png" alt="" /></a>
+                            <a href="#" class="" ><img src="images/c5.png" alt="" /></a>
+                        </div>
+                    </td>
+                    <td>1098年   </td>
+                    <td>《诗歌专辑名称》   </td>
+                    <td>10分钟   </td>
+                </tr>
+                <tr>
+
+                    <td>诗歌名称诗歌名称诗歌名称诗歌名称诗歌名称   </td>
+                    <td class="shiinco">
+                        <div class="df ac">
+                            <a href="#" class="" ><img src="images/c1.png" alt="" /></a>
+                            <a href="#" class="" ><img src="images/c2.png" alt="" /></a>
+                            <a href="#" class="" ><img src="images/c3.png" alt="" /></a>
+                            <a href="#" class="" ><img src="images/c4.png" alt="" /></a>
+                            <a href="#" class="" ><img src="images/c5.png" alt="" /></a>
+                        </div>
+                    </td>
+                    <td>1098年   </td>
+                    <td>《诗歌专辑名称》   </td>
+                    <td>10分钟   </td>
+                </tr>
+
+
+            </table>
+        </div>
+        <div class="flex1">
+            <div class="shijjs">诗人简介</div>
+            <div class="ndwixq ndwixqx">
+
+                纵有成百万的人直接或间接受到达秘属灵生活和工作的影响，但是很少人真正认识这位被神大用的仆人。 依照教会的历史有一件不辩自明的事实，就是每个复兴运动都有一个属灵的领袖。等到主的时候到了，那人就会出现。照样在19世纪初叶，在那次属灵运动开始的时候，神所要使用的器皿亦应时而生。
             </div>
         </div>
-        <div class="cl h33"></div>
-        <div class="oages df ac js">
-            <a href="#" class="fema cur" ><em class="">< </em> 上一页 </a>
-            <span class="">
-					<a href="#" class="pagesa cur" >1</a>
-					<a href="#" class="pagesa" >2</a>
-					<a href="#" class="pagesa" >3</a>
-					<a href="#" class="pagesa" >4</a>
-					<a href="#" class="pagesa" >5</a>
-					<a href="#" class="pagesa" >6</a>
-					<a href="#" class="pagesa" >7</a>
-				</span>
-            <a href="#" class="fema" > 下一页 <em class="">></em></a>
-        </div>
-        <div class="cl h33"></div>
     </div>
+
+
 </div>
+
 
 <include file="public@footer"/>
 </body>
