--- a/public/themes/simpleboot3/portal/ramshow/index.html
+++ b/public/themes/simpleboot3/portal/ramshow/index.html
@@ -56,7 +56,7 @@
         <div class="lostxbo">
             <div class="snntls df js">
                 <a href="#" class="" >诗歌漫谈  </a>
-                <a href="#" class="morennsg">更多 <span class="songti">&gt;&gt;</span></a>
+                <a href="{:cmf_url('portal/Ramlist/index')}" class="morennsg">更多 <span class="songti">&gt;&gt;</span></a>
             </div>
 
             <div class="sgihmtan">
@@ -70,9 +70,9 @@
                             </div>
                             <div class="youwnkw dc js">
                                 <div class="dwyonrs">
-                                    玛拉基书是旧约的最后一本书卷。玛拉基这名字是指「我的使者」。先知是神的使者，神借着先知宣告祂对子民的责备和应许。本书起首就以「我曾爱你们」一语开始，神向处于艰困世代中的百姓申明祂对他们的爱，而1章6-14节指出神斥责以色列民及以色列的领导者没有尽应尽的责任，纵使神无条件地爱祂的子民。玛拉基先知提出，在复兴的圣殿中，子民必需有真实的敬拜和正当的奉献。先知责备祭司和所有百姓藐视神与他们的关系，而这种藐视和不尊重神的态度，从他们的献祭行动中表现出来。先知指出，他们将污秽的食物献在
+                                    {$v.outline}
                                 </div>
-                                <a href="#" class="dwnnru flex1" >阅读全文»</a>
+                                <a href="{:cmf_url('portal/Ramble/index',array('id'=>$v['id']))}" class="dwnnru flex1" >阅读全文»</a>
 
                                 <div class="co666">
                                     分类： <span class="lan">{$v.name} </span>
