--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -16,7 +16,7 @@
 			<div class="lostxbo">
 				<div class="lisitl df ac js">
 					<span class="">诗歌专辑</span>
-					<a href="{:cmf_url('portal/Album/index')}" class="morennsg" >更多 <span class="songti">>></span></a>
+					<a href="{:cmf_url('portal/Albumlist/index')}" class="morennsg" >更多 <span class="songti">>></span></a>
 				</div>
 
 				<div class="liscontin">
@@ -31,7 +31,7 @@
 			<div class="lostxbo">
 				<div class="lisitl df ac js">
 					<span class="">诗人与诗歌</span>
-					<a href="{:cmf_url('portal/Poet/index')}" class="morennsg" >更多 <span class="songti">>></span></a>
+					<a href="{:cmf_url('portal/Poetlist/index')}" class="morennsg" >更多 <span class="songti">>></span></a>
 				</div>
 
 				<div class="liscontin">
