--- a/public/themes/simpleboot3/public/nav.html
+++ b/public/themes/simpleboot3/public/nav.html
@@ -97,7 +97,7 @@
                     <li><a href="#" target="_blank">诗歌源考 </a></li>
                     <li><a href="#" target="_blank">诗歌赏析 </a></li>
                     <li><a href="{:cmf_url('portal/Ramshow/index')}" target="_blank">诗歌漫谈 </a></li>
-                    <li><a href="{:cmf_url('portal/Poet/index')}" target="_blank">诗人小传 </a></li>
+                    <li><a href="{:cmf_url('portal/Poetlist/index')}" target="_blank">诗人小传 </a></li>
                 </ul>
             </div>
         </div>
