--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -37,7 +37,7 @@
 				<div class="liscontin">
 					<ul class="shilist1 shilist2">
 						<foreach name="poet" item="vo">
-						<li><a href="{:cmf_url('portal/Poet/index',array('id'=>$vo['id']))}" class="" ><span class="sspomg"><img src="__TMPL__/public/assets/images/shi2.jpg" alt="" /></span><span class="shinmtl">{$vo.name}</span></a></li>
+						<li><a href="{:cmf_url('portal/Poet/index',array('id'=>$vo['id']))}" class="" ><span class="sspomg"><img src="{:cmf_get_image_url($vo.photo)}" alt="" /></span><span class="shinmtl">{$vo.name}</span></a></li>
 						</foreach>
 					</ul>
 				</div>
